--- a/Readme
+++ b/Readme
@@ -9,4 +9,4 @@
                                    
                                    
                                    
-Attention : Le fichier de connection est a compléter avec les bons identifiants                                    
+Attention : Le fichier de connection est à compléter avec les bons identifiants                                    
