--- a/Readme
+++ b/Readme
@@ -1,11 +1,11 @@
  ce qui fonctionne : tout
  répartition des taches : 
-                          - Nils : quelques parties fxml 
-                          - Falvien : tout le reste
+                          - Nils : quelques parties fxml, début de la partie pour ajouter/modifier les abonnements 
+                          - Flavien : tout le reste
                           
  Pourcentage de l'investissement :      
-                                   - Nils : ~5%
-                                   - Flavien ~95%
+                                   - Nils : ~10%
+                                   - Flavien ~90%
                                    
                                    
                                    
